[gd_scene load_steps=2 format=3 uid="uid://dg05ulp2hrudk"]

[ext_resource type="Script" uid="uid://ckcvlo8uvhmfk" path="res://dificulty_select.gd" id="1_sbpoa"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sbpoa")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 282.0
offset_right = 583.0
offset_bottom = 326.0
text = "Hard
"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -103.0
offset_right = 78.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
text = "Normal
"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 782.0
offset_top = 281.0
offset_right = 938.0
offset_bottom = 325.0
text = "Ez
"

[node name="Button4" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -21.5
offset_right = 79.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
